2009-03-25  Vivien Malerba <malerba@gnome-db.org>

	* configure.in: set version to 4.0.1
	* libgda/gda-config.c:
	  - added _gda_config_sqlite_provider,
	    a pointer to the SQLite GdaServerProvider, always available, even
	    if the SQLite provider is not installed
	  - correctly behave if no provider is found at all
	* libgda/gda-connection.c:
	* libgda/gda-connection-sqlite.h: added a private method to open a
	connection to an SQLite file directly, even if the SQLite provider is not
	installed: _gda_open_internal_sqlite_connection()
	* libgda/gda-meta-store.c: if the SQLite provider is not installed, then use
	_gda_open_internal_sqlite_connection()
	* libgda/gda-server-operation-private.h:
	* libgda/gda-server-operation.c: added a private
	_gda_server_operation_new_from_string() function
	* libgda/sqlite/Makefile.am
	* libgda/sqlite/gen_emb_string.c: tool which generates source code to embedd all
	the .xml files found in providers/sqlite.
	* libgda/sqlite/gda-sqlite-provider.c: if a .xml file normally installed along
	with the SQLite provider is not found, then use the embedded version, using
	the file generated by the new gen_emb_string tool (which means losing any
	translation but we don't care as it is for internal purposes only).
	* libgda/sqlite/gda-sqlite-provider.c:
	* providers/mysql/gda-mysql-provider.c:
	* providers/postgres/gda-postgres-provider.c:
	* providers/skel-implementation/capi/gda-capi-provider.c: minor corrections in
	warnings
	* tools/gda-sql.c: better handle when the meta store object can be created

Released 4.0.0

2009-03-16  Vivien Malerba <malerba@gnome-db.org>

	* doc/C: doc. fixes

2009-03-15  Vivien Malerba <malerba@gnome-db.org>

	* configure.in: set version to 4.0.0

Released 3.99.14

2009-03-14  Vivien Malerba <malerba@gnome-db.org>

	* libgda/gda-config.c:
	* tools/gda-sql.c:
	* providers/jdbc/jni-wrapper.c: use the XDG Base Directory Specification to
	get the directory where to store the defined data sources and fall back to